[package]
name = "spl-governance-anchor"
version = "3.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_governance"

[dependencies]
anchor-lang = ">=0.26, <=0.31"
spl-governance = { git = "https://github.com/Mythic-Project/solana-program-library.git", branch = "token-2022-v3.0", features = [
    "no-entrypoint",
] }
